# MedBridge-AI-using-MCP

./: .gitignore  README.md  api.py  client.py  diag_env.py  diag_google_calendar.py  diag_smtp.py  main.py  pyproject.toml  server.py  test_mcp.py  test_streaming.py
data/: doctors.json
static/: chat.html  chat.html.backup
